<resources>
    <string name="app_name">Tinder</string>

    <string name="login_btn">Log In</string>
    <string name="register_btn">Sign Up</string>
    <string name="email_hint">Email</string>

    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="repassword_hint">Confirm password</string>
    <string name="acceptUser">Accept</string>

    <string name="confirm_hint">Confirm Password</string>
    <string name="already_registered_text">Already have an account?</string>

    <string-array name="parts_array">
        <item> Male </item>
        <item> Female </item>
        <item> Other </item>
    </string-array>



    <!-- Login Activity -->
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="register_text">No account yet? Create one</string>

    <string name="error_username">Invalid username</string>
    <string name="error_pass">Password must be between 4 and 10 alphanumeric characters</string>


    <!-- Register Activity -->
    <string name="hint_user">Username</string>
    <string name="hint_mail">Mail</string>
    <string name="hint_repassword">Re-enter password</string>
    <string name="login_text">Already a member? Login</string>
    <string name="error_user">Username is empty</string>
    <string name="error_mail">Mail is empty</string>
    <string name="error_repass">Passwords do not match</string>

    <string name="message">Type something!</string>
    <string name="send_label">Send</string>
    <string name="hola_tet">hola tet</string>


</resources>
