<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_gradient"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">


    <!--  Foto Logo -->
    <ImageView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo4" />

    <!--  Text User -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="330dp"
        android:layout_marginTop="48dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_input_edit"
            style="@style/Widget.TextEdit"
            android:layout_width="330dp"
            android:hint="@string/hint_user"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--  Text Mail -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="330dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input_edit"
            style="@style/Widget.TextEdit"
            android:layout_width="330dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--  Text Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="330dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input_edit"
            style="@style/Widget.TextEdit"
            android:layout_width="330dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--  Text RePassword -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repassword_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="330dp"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repassword_input_edit"
            style="@style/Widget.TextEdit"
            android:layout_width="330dp"
            android:hint="@string/repassword_hint"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Register Button -->
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shapelogin"
        android:padding="0dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/register_btn"
        android:textColor="@color/rosa2" />


    <!-- Alrady registered textview -->
    <TextView
        android:id="@+id/text_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/already_registered_text"
        android:textColor="@color/blanc"
        android:textSize="16dip" />


</LinearLayout>
