<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_gradient"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical">


    <!--  Foto Logo -->
    <ImageView
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo4" />

    <!--  Text Mail -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="330dp"
        android:layout_marginTop="48dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_input_edit"
            style="@style/Widget.TextEdit"
            android:layout_width="330dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <!--  Text Password -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.TextInputLayout"
        android:layout_width="330dp"
        android:layout_marginTop="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_input_edit"
            style="@style/Widget.TextEdit"
            android:layout_width="330dp"
            android:hint="@string/password_hint"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>


    <!-- Login Button -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shapelogin"
        android:padding="0dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/login_btn"
        android:textColor="@color/rosa2" />


    <!-- Register textview -->
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shaperegister"
        android:padding="0dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/register_btn"
        android:textColor="@color/blanc" />


</LinearLayout>
